Try to fix misalignment in uplink tree
Not perfect :/

--- a/default/_emanote-static/inverted-tree.css
+++ b/default/_emanote-static/inverted-tree.css
@@ -13,7 +13,7 @@ body .tree {
   overflow: auto;
   /* See more-head.tpl */
   font-family: 'Nunito', sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 0.8em;
 }
 body .tree ul.root {
@@ -49,7 +49,7 @@ body .tree li::before {
   top: 0px;
   right: 50%;
   border-top: solid 2px #cccccc;
-  width: 50%;
+  width: 60%;
   height: 1.19999em;
 }
 body .tree li::after {
